@@ -31,7 +31,7 @@ BntDb::logDbErrors ($db, $result, __LINE__, __FILE__);
 
 if (!$result->EOF)
 {
-    if ($mail == $admin_mail)
+    if ($mail == $bntreg->admin_mail)
     {
         echo "<div style='font-size:14px; font-weight:bold; color:#f00;'>";
         echo $langvars['l_mail_admin_denied'];
@@ -58,13 +58,13 @@ if (!$result->EOF)
         $langvars['l_mail_message'] = str_replace ("[link]", $link_to_reset, $langvars['l_mail_message']);
         $langvars['l_mail_message'] = str_replace ("[name]", $playerinfo['character_name'], $langvars['l_mail_message']);
         $langvars['l_mail_message'] = str_replace ("[ip]", $_SERVER['REMOTE_ADDR'], $langvars['l_mail_message']);
-        $langvars['l_mail_message'] = str_replace ("[game_name]", $game_name, $langvars['l_mail_message']);
+        $langvars['l_mail_message'] = str_replace ("[game_name]", $bntreg->game_name, $langvars['l_mail_message']);
 
         // Some reason \r\n is broken, so replace them now.
         $langvars['l_mail_message'] = str_replace ('\r\n', "\r\n", $langvars['l_mail_message']);
 
         // Need to set the topic with the game name.
-        $langvars['l_mail_topic'] = str_replace ("[game_name]", $game_name, $langvars['l_mail_topic']);
+        $langvars['l_mail_topic'] = str_replace ("[game_name]", $bntreg->game_name, $langvars['l_mail_topic']);
 
         // Recovery time is a timestamp at the time of recovery attempt, which is valid for 30 minutes
         // After 30 minutes, it will be cleared to null by scheduler. If it is used, it will also be cleared.
@@ -72,7 +72,7 @@ if (!$result->EOF)
         $recovery_update_result = $db->Execute ("UPDATE {$db->prefix}ships SET recovery_time=? WHERE email = ?;", array (time(), $playerinfo['email']));
         BntDb::logDbErrors ($db, $recovery_update_result, __LINE__, __FILE__);
 
-        mail ($playerinfo['email'], $langvars['l_mail_topic'], $langvars['l_mail_message'] . "\r\n\r\n{$link_to_reset}\r\n", "From: {$admin_mail}\r\nReply-To: {$admin_mail}\r\nX-Mailer: PHP/" . phpversion());
+        mail ($playerinfo['email'], $langvars['l_mail_topic'], $langvars['l_mail_message'] . "\r\n\r\n{$link_to_reset}\r\n", "From: {$bntreg->admin_mail}\r\nReply-To: {$bntreg->admin_mail}\r\nX-Mailer: PHP/" . phpversion());
         echo "<div style='color:#fff; text-align:left;'>" . $langvars['l_mail_sent'] . " <span style='color:#0f0;'>{$mail}</span></div>\n";
         echo "<br>\n";
         echo "<div style='font-size:14px; font-weight:bold; color:#f00;'>";
