@@ -25,8 +25,8 @@ if (strpos ($_SERVER['PHP_SELF'], 'sched_turns.php')) // Prevent direct access t
 
 echo "<strong>TURNS</strong><br><br>";
 echo "Adding turns...";
-$resa = $db->Execute ("UPDATE {$db->prefix}ships SET turns = LEAST (turns + ($turns_per_tick * $multiplier), $max_turns) WHERE turns < $max_turns");
-//$resa = $db->Execute ("UPDATE {$db->prefix}ships SET turns = LEAST (turns + (? * ?), ?) WHERE turns < ?", array ($turns_per_tick, $multiplier, $max_turns, $max_turns));
+$resa = $db->Execute ("UPDATE {$db->prefix}ships SET turns = LEAST (turns + ($bntreg->turns_per_tick * $multiplier), $max_turns) WHERE turns < $bntreg->max_turns");
+//$resa = $db->Execute ("UPDATE {$db->prefix}ships SET turns = LEAST (turns + (? * ?), ?) WHERE turns < ?", array ($bntreg->turns_per_tick, $multiplier, $bntreg->max_turns, $bntreg->max_turns));
 $debug = BntDb::logDbErrors ($db, $resa, __LINE__, __FILE__);
 is_query_ok ($db, $debug);
 echo "<br>";
