@@ -1,3 +1,7 @@
+TheKabal (23 November 2013)
+--------------------------------------
+Fixes stemming from global variables
+
 TheKabal (16 November 2013)
 --------------------------------------
 Remove the global variables hacks for good.
